--- a/index.html
+++ b/index.html
@@ -329,152 +329,48 @@
 </section>
 
 
-  <!-- ===== SCIENCE ===== -->
-  <section id="science" class="science-section" data-fade-scope>
-    <div class="container">
   
-      <!-- Header -->
-      <div class="sc-header">
-        <span class="sc-badge">Science</span>
-        <h2 class="sc-title">
-          Backed by ingredients that <span class="gold">work</span>
-        </h2>
-        <p class="sc-sub">
-          Clean stimulation, steady focus, fewer jitters. Here’s the “why” behind Vero — and how it’s different
-          from quick spikes and sugary fixes.
-        </p>
-      </div>
-  
-      <!-- Caffeine curve (illustrative) -->
-      <figure class="curve">
-        <svg viewBox="0 0 640 200" role="img" aria-label="Caffeine curves: coffee spike vs Vero smooth">
-          <!-- grid -->
-          <path d="M48 20 V180 M48 180 H610" stroke="rgba(2,6,23,.12)" stroke-width="1"/>
-          <!-- labels -->
-          <text x="8" y="26" fill="#64748b" font-size="12">Energy</text>
-          <text x="560" y="196" fill="#64748b" font-size="12">Time →</text>
-  
-          <!-- Coffee spike -->
-          <path d="M48 175 C 140 70, 210 45, 270 40 S 380 120, 610 175"
-                fill="none" stroke="#ef4444" stroke-width="3" opacity=".9"/>
-          <circle cx="270" cy="40" r="3.5" fill="#ef4444"/>
-          <text x="278" y="38" fill="#ef4444" font-size="11">coffee spike</text>
-  
-          <!-- Vero smooth -->
-          <defs>
-            <linearGradient id="buzzgrad" x1="0" y1="0" x2="1" y2="0">
-              <stop offset="0" stop-color="#8b5cf6"/>
-              <stop offset="1" stop-color="#22c55e"/>
-            </linearGradient>
-          </defs>
-          <path d="M48 175 C 150 150, 260 90, 320 40 S 500 40, 610 150"
-                fill="none" stroke="url(#buzzgrad)" stroke-width="4"/>
-          <text x="505" y="130" fill="#6d28d9" font-size="11">Vero target curve</text>
-        </svg>
-        <figcaption>Illustrative curves: coffee can peak fast, then dip; Vero aims for a steadier lift.</figcaption>
-      </figure>
-  
-      <!-- Ingredient cards -->
-      <div class="ing-grid">
-  
-        <article class="ing-card ing-lift" tabindex="0">
-          <div class="ing-eyebrow">Lift</div>
-          <h3>Green-tea Caffeine</h3>
-          <p>Steady focus from natural caffeine, without the sharp edge.</p>
-          <ul class="ing-facts">
-            <li><strong>Target per bar:</strong> ~<span class="mono">80 mg</span>*</li>
-            <li><strong>Source:</strong> green tea extract</li>
-            <li><strong>Reason:</strong> pairs well with L-theanine for calmer alertness</li>
-          </ul>
-          <details class="ing-evidence">
-            <summary>Evidence snapshot</summary>
-            <p>Moderate caffeine improves alertness and reaction time; when paired with L-theanine, studies report
-               better task accuracy and fewer jitters (varies by dose and individual).<span class="note">†</span></p>
-          </details>
-        </article>
-  
-        <article class="ing-card ing-smooth" tabindex="0">
-          <div class="ing-eyebrow">Smooth</div>
-          <h3>L-theanine</h3>
-          <p>Promotes calm alertness and smooths caffeine’s lift.</p>
-          <ul class="ing-facts">
-            <li><strong>Typical range:</strong> <span class="mono">100–200 mg</span></li>
-            <li><strong>Effect:</strong> supports attention with relaxed focus</li>
-          </ul>
-          <details class="ing-evidence">
-            <summary>Evidence snapshot</summary>
-            <p>Reviews note L-theanine increases alpha-wave activity (relaxed alertness). Combined with caffeine,
-               it may reduce perceived stress and improve attention switching.</p>
-          </details>
-        </article>
-  
-        <article class="ing-card ing-hydrate" tabindex="0">
-          <div class="ing-eyebrow">Hydrate</div>
-          <h3>Electrolytes</h3>
-          <p>Hydration supports cognition and endurance during long sessions.</p>
-          <ul class="ing-facts">
-            <li>Sodium • Potassium • Magnesium</li>
-            <li>Helps maintain fluid balance for mental stamina</li>
-          </ul>
-          <details class="ing-evidence">
-            <summary>Evidence snapshot</summary>
-            <p>Even mild dehydration can impair mood and focus; electrolyte balance helps prevent those dips.</p>
-          </details>
-        </article>
-  
-        <article class="ing-card ing-adapt" tabindex="0">
-          <div class="ing-eyebrow">Resilience</div>
-          <h3>Adaptogens</h3>
-          <p>Stress-support so focus actually sticks (e.g., rhodiola, ashwagandha).</p>
-          <ul class="ing-facts">
-            <li>Targets perceived fatigue and stress reactivity</li>
-            <li>Complements caffeine’s alertness with composure</li>
-          </ul>
-          <details class="ing-evidence">
-            <summary>Evidence snapshot</summary>
-            <p>Emerging research suggests some adaptogens reduce fatigue and support stress adaptation in healthy
-               adults; effects vary with dose and personal response.</p>
-          </details>
-        </article>
-  
-      </div>
-  
-      <!-- How it works -->
-      <div class="hiw">
-        <h3 class="hiw-title">How it works — the quick version</h3>
-        <ol class="hiw-steps">
-          <li><span>1</span><strong>Lift</strong>: natural caffeine wakes up adenosine-fog — no harsh spike.</li>
-          <li><span>2</span><strong>Smooth</strong>: L-theanine modulates the lift → calm focus, fewer jitters.</li>
-          <li><span>3</span><strong>Hydrate</strong>: electrolytes keep the system balanced while you think.</li>
-          <li><span>4</span><strong>Resilience</strong>: adaptogens help your brain stay in “get-stuff-done” mode.</li>
-        </ol>
-      </div>
-  
-      <!-- More Qs (fun + human) -->
-      <div class="sc-faq">
-        <details>
-          <summary>Why green tea instead of coffee?</summary>
-          <p>Green tea has a gentler curve and plays nicely with L-theanine. Coffee’s great — we just wanted a
-             carry-anywhere option with fewer spikes and no brewing.</p>
-        </details>
-        <details>
-          <summary>When should I use Vero?</summary>
-          <p>Morning classes, deep-work blocks, pre-meeting boosts, travel days. If caffeine-sensitive, start with half.</p>
-        </details>
-        <details>
-          <summary>Medical advice?</summary>
-          <p>No — this is food, not medicine. If pregnant, nursing, or managing a condition, talk to your clinician
-             before using caffeine or adaptogens.</p>
-        </details>
-      </div>
-  
-      <p class="sc-foot">
-        *Targets shown during pre-release and may change as we finalize the formula.
-        <span class="note">† Evidence snapshots are summary notes of published research; individual responses vary.</span>
+ <!-- ===== SCIENCE (Curve Only) ===== -->
+<section id="science" class="science-section home-curve-only" data-fade-scope>
+  <div class="container">
+    <div class="sc-header">
+      <span class="sc-badge">Science</span>
+      <h2 class="sc-title">The curve, not just the caffeine</h2>
+      <p class="sc-sub">
+        Coffee spikes, then dips. Vero aims for a smoother, longer focus window.
       </p>
-  
     </div>
-  </section>
+
+    <figure class="curve">
+      <p style="font-size:0.85rem;color:#64748b;margin-bottom:8px;">
+        Illustrative only – curves show the <em>idea</em>, not lab data.
+      </p>
+
+      <!-- SVG lifted from the Science page (simplified) -->
+      <svg viewBox="0 0 640 220" role="img"
+           aria-label="Energy over time: coffee spike vs Vero smoother curve">
+        <!-- Axes -->
+        <path d="M48 20 V190 M48 190 H610"
+              stroke="rgba(15,23,42,0.18)" stroke-width="1" />
+        <text x="10" y="28" fill="#64748b" font-size="12">Energy</text>
+        <text x="560" y="210" fill="#64748b" font-size="12">Time →</text>
+
+        <!-- Coffee spike (red) -->
+        <path d="M48 185 C 140 70, 210 45, 270 40
+                 S 380 115, 610 185"
+              fill="none" stroke="#ef4444" stroke-width="3" />
+        <text x="250" y="54" fill="#ef4444" font-size="12">coffee spike</text>
+
+        <!-- Vero target curve (green) -->
+        <path d="M48 185 C 130 110, 220 70, 310 60
+                 S 470 80, 610 185"
+              fill="none" stroke="#22c55e" stroke-width="3" />
+        <text x="340" y="80" fill="#22c55e" font-size="12">Vero target curve</text>
+      </svg>
+    </figure>
+  </div>
+
+</section>
 <!-- ===== NUTRITION SECTION REMOVED ===== -->
 <section id="nutrition" class="nt-section" style="display: none;">
   <div class="container">
@@ -691,39 +587,63 @@
 
 
 
-<!-- ===== SOCIAL PROOF (clean) ===== -->
-<section id="proof" class="sp-section">
+
+<!-- ===== OUR REACTIONS (Placeholder Reviews) ===== -->
+<section id="reactions" class="reviews-section" aria-labelledby="reviews-title">
   <div class="container">
-
-    <div class="sp-head">
-      <span class="sp-badge">What people say</span>
-      <h2>Real reactions from early tasters</h2>
-      <p class="sp-sub">Light, honest quotes while we’re still in pre-release.</p>
+    <div class="reviews-header">
+      <span class="section-eyebrow">Our Reactions</span>
+      <h2 id="reviews-title" class="reviews-title">What people are saying</h2>
+      <p class="reviews-sub">Early testers only for now — full reviews coming soon.</p>
     </div>
 
-    <!-- Testimonials -->
-    <div class="sp-grid">
-      <article class="sp-card">
-        <div class="sp-stars" aria-label="5 stars">★★★★★</div>
-        <blockquote>“Best on-the-go snack, especially when dealing with tiring children, without the crash.”</blockquote>
-        <footer class="sp-who">
-          <div class="sp-name">Helena W</div>
-          <div class="sp-initials">HW</div>
+    <div class="reviews-grid">
+      <article class="review-card">
+        <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
+        <blockquote>
+          “Noticeable lift without jitters. Felt steady for my whole study block.”
+        </blockquote>
+        <footer class="review-meta">
+          <div class="avatar" aria-hidden="true">A</div>
+          <div class="meta">
+            <strong>Alex • Student</strong>
+            <span>Beta tester</span>
+          </div>
         </footer>
       </article>
 
-      <article class="sp-card">
-        <blockquote>“The Vero actually helps me study and lock in for my difficult exams.”</blockquote>
-        <div class="sp-stars" aria-label="5 stars">★★★★★</div>
-        <footer class="sp-who">
-          <div class="sp-name">Gustaf L</div>
-          <div class="sp-initials">GL</div>
+      <article class="review-card">
+        <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
+        <blockquote>
+          “Loved the curve. I didn’t crash mid-afternoon like I do with coffee.”
+        </blockquote>
+        <footer class="review-meta">
+          <div class="avatar" aria-hidden="true">J</div>
+          <div class="meta">
+            <strong>Jamie • Consultant</strong>
+            <span>Prototype feedback</span>
+          </div>
+        </footer>
+      </article>
+
+      <article class="review-card">
+        <div class="review-stars" aria-label="4 out of 5">★★★★☆</div>
+        <blockquote>
+          “Clean energy. Would buy for exams and travel days.”
+        </blockquote>
+        <footer class="review-meta">
+          <div class="avatar" aria-hidden="true">R</div>
+          <div class="meta">
+            <strong>Riley • Researcher</strong>
+            <span>Pilot sample</span>
+          </div>
         </footer>
       </article>
     </div>
 
-
-
+    <p class="reviews-footnote">
+      Real customer reviews will appear here after launch.
+    </p>
   </div>
 </section>
 
