--- a/index.html
+++ b/index.html
@@ -589,61 +589,116 @@
 
 
 
-<!-- ===== OUR REACTIONS (Placeholder Reviews) ===== -->
-<section id="reactions" class="reviews-section" aria-labelledby="reviews-title">
+
+<!-- ===== OUR REACTIONS / REVIEWS MARQUEE ===== -->
+<section id="reactions" class="reviews-marquee" aria-labelledby="reviews-title">
+  <div class="container reviews-header">
+    <span class="section-eyebrow">Our reactions</span>
+    <h2 id="reviews-title">What people are saying</h2>
+    <p class="reviews-sub">
+      Early testers for now — full customer reviews will appear here after launch.
+    </p>
+  </div>
+
+  <div class="reviews-band">
+    <div class="reviews-track">
+      <!-- One loop of cards -->
+      <article class="review-card">
+        <div class="review-avatar">
+          <span class="review-avatar-initial">A</span>
+        </div>
+        <div class="review-body">
+          <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
+          <p class="review-text">
+            “Helped me lock in for a long study block without feeling heavy or wired.”
+          </p>
+          <p class="review-meta">
+            Alex • Student · Early tester
+          </p>
+        </div>
+      </article>
+
+      <article class="review-card">
+        <div class="review-avatar">
+          <span class="review-avatar-initial">J</span>
+        </div>
+        <div class="review-body">
+          <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
+          <p class="review-text">
+            “Nice, even energy for calls and deep work. The curve feels really controlled.”
+          </p>
+          <p class="review-meta">
+            Jamie • Consultant · Prototype feedback
+          </p>
+        </div>
+      </article>
+
+      <article class="review-card">
+        <div class="review-avatar">
+          <span class="review-avatar-initial">R</span>
+        </div>
+        <div class="review-body">
+          <div class="review-stars" aria-label="4 out of 5">★★★★☆</div>
+          <p class="review-text">
+            “Great for travel days and exams. Easy to keep in my bag and actually useful.”
+          </p>
+          <p class="review-meta">
+            Riley • Researcher · Pilot sample
+          </p>
+        </div>
+      </article>
+
+      <!-- Duplicate the same 3 cards for a seamless loop -->
+      <article class="review-card">
+        <div class="review-avatar">
+          <span class="review-avatar-initial">A</span>
+        </div>
+        <div class="review-body">
+          <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
+          <p class="review-text">
+            “Helped me lock in for a long study block without feeling heavy or wired.”
+          </p>
+          <p class="review-meta">
+            Alex • Student · Early tester
+          </p>
+        </div>
+      </article>
+
+      <article class="review-card">
+        <div class="review-avatar">
+          <span class="review-avatar-initial">J</span>
+        </div>
+        <div class="review-body">
+          <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
+          <p class="review-text">
+            “Nice, even energy for calls and deep work. The curve feels really controlled.”
+          </p>
+          <p class="review-meta">
+            Jamie • Consultant · Prototype feedback
+          </p>
+        </div>
+      </article>
+
+      <article class="review-card">
+        <div class="review-avatar">
+          <span class="review-avatar-initial">R</span>
+        </div>
+        <div class="review-body">
+          <div class="review-stars" aria-label="4 out of 5">★★★★☆</div>
+          <p class="review-text">
+            “Great for travel days and exams. Easy to keep in my bag and actually useful.”
+          </p>
+          <p class="review-meta">
+            Riley • Researcher · Pilot sample
+          </p>
+        </div>
+      </article>
+    </div>
+  </div>
+
   <div class="container">
-    <div class="reviews-header">
-      <span class="section-eyebrow">Our Reactions</span>
-      <h2 id="reviews-title" class="reviews-title">What people are saying</h2>
-      <p class="reviews-sub">Early testers only for now — full reviews coming soon.</p>
-    </div>
-
-    <div class="reviews-grid">
-      <article class="review-card">
-        <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
-        <blockquote>
-          “Noticeable lift without jitters. Felt steady for my whole study block.”
-        </blockquote>
-        <footer class="review-meta">
-          <div class="avatar" aria-hidden="true">A</div>
-          <div class="meta">
-            <strong>Alex • Student</strong>
-            <span>Beta tester</span>
-          </div>
-        </footer>
-      </article>
-
-      <article class="review-card">
-        <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
-        <blockquote>
-          “Loved the curve. I didn’t crash mid-afternoon like I do with coffee.”
-        </blockquote>
-        <footer class="review-meta">
-          <div class="avatar" aria-hidden="true">J</div>
-          <div class="meta">
-            <strong>Jamie • Consultant</strong>
-            <span>Prototype feedback</span>
-          </div>
-        </footer>
-      </article>
-
-      <article class="review-card">
-        <div class="review-stars" aria-label="4 out of 5">★★★★☆</div>
-        <blockquote>
-          “Clean energy. Would buy for exams and travel days.”
-        </blockquote>
-        <footer class="review-meta">
-          <div class="avatar" aria-hidden="true">R</div>
-          <div class="meta">
-            <strong>Riley • Researcher</strong>
-            <span>Pilot sample</span>
-          </div>
-        </footer>
-      </article>
-    </div>
-
     <p class="reviews-footnote">
-      Real customer reviews will appear here after launch.
+      Real customer reviews and videos will roll in here as we launch.
     </p>
   </div>
 </section>
