--- a/index.html
+++ b/index.html
@@ -591,117 +591,112 @@
 
 
 <!-- ===== OUR REACTIONS / REVIEWS MARQUEE ===== -->
-<section id="reactions" class="reviews-marquee" aria-labelledby="reviews-title">
+<!-- ===== OUR REACTIONS / REVIEWS BELT ===== -->
+<section id="reactions" class="reviews-gallery" aria-labelledby="reviews-title">
   <div class="container reviews-header">
     <span class="section-eyebrow">Our reactions</span>
     <h2 id="reviews-title">What people are saying</h2>
     <p class="reviews-sub">
-      Early testers for now — full customer reviews will appear here after launch.
+      Early testers for now — full customer reviews and videos will roll in here after launch.
     </p>
   </div>
 
-  <div class="reviews-band">
-    <div class="reviews-track">
+  <div class="reviews-rail-wrapper">
+    <div class="reviews-rail">
       <!-- One loop of cards -->
-      <article class="review-card">
-        <div class="review-avatar">
-          <span class="review-avatar-initial">A</span>
+
+      <article class="review-tile">
+        <div class="review-media">
+          <!-- later: replace this block with an <img> or embedded video -->
+          <span class="review-play">▶</span>
         </div>
-        <div class="review-body">
-          <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
-          <p class="review-text">
-            “Helped me lock in for a long study block without feeling heavy or wired.”
-          </p>
-          <p class="review-meta">
-            Alex • Student · Early tester
-          </p>
+        <div class="review-copy">
+          <h3>Study Sessions</h3>
+          <p>How students use Vero to stay locked in for long focus blocks.</p>
         </div>
       </article>
 
-      <article class="review-card">
-        <div class="review-avatar">
-          <span class="review-avatar-initial">J</span>
+      <article class="review-tile">
+        <div class="review-media">
+          <span class="review-play">▶</span>
         </div>
-        <div class="review-body">
-          <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
-          <p class="review-text">
-            “Nice, even energy for calls and deep work. The curve feels really controlled.”
-          </p>
-          <p class="review-meta">
-            Jamie • Consultant · Prototype feedback
-          </p>
+        <div class="review-copy">
+          <h3>Desk Days</h3>
+          <p>Early testers swapping a second coffee for a Vero bar.</p>
         </div>
       </article>
 
-      <article class="review-card">
-        <div class="review-avatar">
-          <span class="review-avatar-initial">R</span>
+      <article class="review-tile">
+        <div class="review-media">
+          <span class="review-play">▶</span>
         </div>
-        <div class="review-body">
-          <div class="review-stars" aria-label="4 out of 5">★★★★☆</div>
-          <p class="review-text">
-            “Great for travel days and exams. Easy to keep in my bag and actually useful.”
-          </p>
-          <p class="review-meta">
-            Riley • Researcher · Pilot sample
-          </p>
+        <div class="review-copy">
+          <h3>Travel & Exams</h3>
+          <p>Why people keep a bar in their bag for long days and flights.</p>
         </div>
       </article>
 
-      <!-- Duplicate the same 3 cards for a seamless loop -->
-      <article class="review-card">
-        <div class="review-avatar">
-          <span class="review-avatar-initial">A</span>
+      <article class="review-tile">
+        <div class="review-media">
+          <span class="review-play">▶</span>
         </div>
-        <div class="review-body">
-          <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
-          <p class="review-text">
-            “Helped me lock in for a long study block without feeling heavy or wired.”
-          </p>
-          <p class="review-meta">
-            Alex • Student · Early tester
-          </p>
+        <div class="review-copy">
+          <h3>First Impressions</h3>
+          <p>Live reactions from taste tests and first-time tries.</p>
         </div>
       </article>
 
-      <article class="review-card">
-        <div class="review-avatar">
-          <span class="review-avatar-initial">J</span>
+      <!-- Duplicate the same set for a seamless loop -->
+      <article class="review-tile">
+        <div class="review-media">
+          <span class="review-play">▶</span>
         </div>
-        <div class="review-body">
-          <div class="review-stars" aria-label="5 out of 5">★★★★★</div>
-          <p class="review-text">
-            “Nice, even energy for calls and deep work. The curve feels really controlled.”
-          </p>
-          <p class="review-meta">
-            Jamie • Consultant · Prototype feedback
-          </p>
+        <div class="review-copy">
+          <h3>Study Sessions</h3>
+          <p>How students use Vero to stay locked in for long focus blocks.</p>
         </div>
       </article>
 
-      <article class="review-card">
-        <div class="review-avatar">
-          <span class="review-avatar-initial">R</span>
+      <article class="review-tile">
+        <div class="review-media">
+          <span class="review-play">▶</span>
         </div>
-        <div class="review-body">
-          <div class="review-stars" aria-label="4 out of 5">★★★★☆</div>
-          <p class="review-text">
-            “Great for travel days and exams. Easy to keep in my bag and actually useful.”
-          </p>
-          <p class="review-meta">
-            Riley • Researcher · Pilot sample
-          </p>
+        <div class="review-copy">
+          <h3>Desk Days</h3>
+          <p>Early testers swapping a second coffee for a Vero bar.</p>
         </div>
       </article>
+
+      <article class="review-tile">
+        <div class="review-media">
+          <span class="review-play">▶</span>
+        </div>
+        <div class="review-copy">
+          <h3>Travel & Exams</h3>
+          <p>Why people keep a bar in their bag for long days and flights.</p>
+        </div>
+      </article>
+
+      <article class="review-tile">
+        <div class="review-media">
+          <span class="review-play">▶</span>
+        </div>
+        <div class="review-copy">
+          <h3>First Impressions</h3>
+          <p>Live reactions from taste tests and first-time tries.</p>
+        </div>
+      </article>
+
     </div>
   </div>
 
   <div class="container">
     <p class="reviews-footnote">
-      Real customer reviews and videos will roll in here as we launch.
+      Real clips, photos, and reviews will replace these placeholders as we launch.
     </p>
   </div>
 </section>
+
 
 
   
