Add proper id, name, and accessibility attributes to all form fields across all pages

--- a/Products.html
+++ b/Products.html
@@ -254,9 +254,9 @@
       <div class="footer-column">
         <h4>Join our newsletter</h4>
         <p>No spam, just smarter energy.</p>
-        <form class="newsletter-form">
-          <input type="email" placeholder="your@email.com" />
-          <button type="submit">→</button>
+        <form class="newsletter-form" id="products-newsletter-form" action="#" method="post">
+          <input type="email" id="products-newsletter-email" name="email" placeholder="your@email.com" required aria-label="Email address" />
+          <button type="submit" aria-label="Subscribe to newsletter">→</button>
         </form>
       </div>
     </div>
