--- a/Contact.html
+++ b/Contact.html
@@ -35,10 +35,10 @@
     </section>
 
     <section class="container contact-grid">
-      <form class="contact-form" action="https://formspree.io/f/your-id" method="POST">
-        <label>Name<input type="text" name="name" required></label>
-        <label>Email<input type="email" name="email" required></label>
-        <label>Message<textarea name="message" rows="6" required></textarea></label>
+      <form class="contact-form" id="contact-form" action="https://formspree.io/f/your-id" method="POST">
+        <label for="contact-name">Name<input type="text" id="contact-name" name="name" required></label>
+        <label for="contact-email">Email<input type="email" id="contact-email" name="email" required></label>
+        <label for="contact-message">Message<textarea id="contact-message" name="message" rows="6" required></textarea></label>
         <button type="submit" class="cta-primary">Send</button>
       </form>
 
@@ -59,7 +59,7 @@
       <div class="footer-column"><h3>Buzzbar</h3><p>Clean energy, smarter nutrition.</p></div>
       <div class="footer-column"><h4>Contact</h4><p><a href="mailto:tomwiseman@buzzbar.se">tomwiseman@buzzbar.se</a></p></div>
       <div class="footer-column"><h4>Info</h4><p>Plant-based. No artificial sweeteners.</p></div>
-      <div class="footer-column"><h4>Newsletter</h4><form class="newsletter-form"><input placeholder="Email" /><button>→</button></form></div>
+      <div class="footer-column"><h4>Newsletter</h4><form class="newsletter-form" id="contact-newsletter-form" action="#" method="post"><input type="email" id="contact-newsletter-email" name="email" placeholder="Email" required aria-label="Email address" /><button type="submit" aria-label="Subscribe to newsletter">→</button></form></div>
     </div>
     <div class="footer-bottom">© 2025 Buzzbar</div>
   </footer>
