--- a/Science.html
+++ b/Science.html
@@ -393,9 +393,9 @@
       <div class="footer-column">
         <h4>Join our newsletter</h4>
         <p>No spam, just smarter energy.</p>
-        <form class="newsletter-form">
-          <input type="email" placeholder="your@email.com" />
-          <button type="submit">→</button>
+        <form class="newsletter-form" id="science-newsletter-form" action="#" method="post">
+          <input type="email" id="science-newsletter-email" name="email" placeholder="your@email.com" required aria-label="Email address" />
+          <button type="submit" aria-label="Subscribe to newsletter">→</button>
         </form>
       </div>
     </div>
