--- a/index.html
+++ b/index.html
@@ -51,6 +51,26 @@
 
       <!-- CTA -->
       <a href="#products" class="cta-contact">Buy Now</a>
+
+      <!-- Hamburger Menu Button (Mobile Only) -->
+      <button class="hamburger-menu" aria-label="Toggle menu" aria-expanded="false">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </button>
+    </div>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay">
+      <nav class="mobile-nav" role="navigation" aria-label="Mobile navigation">
+        <a href="index.html" class="mobile-nav-link">Home</a>
+        <a href="Products.html" class="mobile-nav-link">Products</a>
+        <a href="Science.html" class="mobile-nav-link">Science</a>
+        <a href="Nutrition.html" class="mobile-nav-link">Nutrition</a>
+        <a href="Our-Story.html" class="mobile-nav-link">Our Story</a>
+        <a href="#contact" class="mobile-nav-link">Contact</a>
+        <a href="#products" class="mobile-nav-link mobile-cta">Buy Now</a>
+      </nav>
     </div>
   </header>
 
@@ -1130,3 +1150,47 @@
       updateCarousel();
     })();
   </script>
+
+  <!-- Hamburger Menu Script -->
+  <script>
+    (function() {
+      const hamburger = document.querySelector('.hamburger-menu');
+      const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
+      const mobileNavLinks = document.querySelectorAll('.mobile-nav-link');
+
+      if (!hamburger || !mobileMenuOverlay) return;
+
+      // Toggle menu
+      hamburger.addEventListener('click', function() {
+        const isActive = this.classList.toggle('active');
+        mobileMenuOverlay.classList.toggle('active');
+        this.setAttribute('aria-expanded', isActive);
+        
+        // Prevent body scroll when menu is open
+        document.body.style.overflow = isActive ? 'hidden' : '';
+      });
+
+      // Close menu when clicking on a link
+      mobileNavLinks.forEach(link => {
+        link.addEventListener('click', function() {
+          hamburger.classList.remove('active');
+          mobileMenuOverlay.classList.remove('active');
+          hamburger.setAttribute('aria-expanded', 'false');
+          document.body.style.overflow = '';
+        });
+      });
+
+      // Close menu when clicking outside
+      mobileMenuOverlay.addEventListener('click', function(e) {
+        if (e.target === this) {
+          hamburger.classList.remove('active');
+          this.classList.remove('active');
+          hamburger.setAttribute('aria-expanded', 'false');
+          document.body.style.overflow = '';
+        }
+      });
+    })();
+  </script>
+
+</body>
+</html>
