Update website styling and content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Vero – Natural Energy</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Yellowtail&family=Belanosima:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css?v=36" />
   <link rel="stylesheet" href="deux-style.css?v=29" />
 </head>
@@ -149,95 +149,53 @@
       
       <!-- 1 Box = 12 Bars -->
       <article class="quantity-card" data-index="0">
+        <div class="quantity-amount" data-number="12"></div>
         <div class="quantity-header">
           <h3>Starter Pack</h3>
           <p class="quantity-subtitle">1 Box</p>
         </div>
         <div class="quantity-visual">
-          <div class="box-stack">
-            <div class="product-box">
-              <span class="box-label">12 bars</span>
-            </div>
+          <div class="product-box">
+            <span class="box-label">12 bars</span>
           </div>
         </div>
         <div class="quantity-details">
-          <div class="quantity-amount">1 Box (12 Bars)</div>
-          <div class="quantity-price">
-            <span class="price-amount">$29</span>
-            <span class="price-per">$2.42 per bar</span>
-          </div>
-          <ul class="quantity-benefits">
-            <li>Perfect to get started</li>
-            <li>12 days of clean energy</li>
-            <li>Try the Vero difference</li>
-          </ul>
-          <button class="quantity-cta cta-secondary">Buy Now</button>
+          <button class="quantity-cta cta-secondary">Buy Now - $29</button>
         </div>
       </article>
 
       <!-- 2 Boxes = 24 Bars (Most Popular) -->
       <article class="quantity-card popular active" data-index="1">
         <span class="popular-badge">Most Popular</span>
+        <div class="quantity-amount" data-number="24"></div>
         <div class="quantity-header">
-          <h3>Best Value</h3>
+          <h3>Duo Pack</h3>
           <p class="quantity-subtitle">2 Boxes</p>
         </div>
         <div class="quantity-visual">
-          <div class="box-stack">
-            <div class="product-box">
-              <span class="box-label">12 bars</span>
-            </div>
-            <div class="product-box">
-              <span class="box-label">12 bars</span>
-            </div>
+          <div class="product-box">
+            <span class="box-label">12 bars</span>
           </div>
         </div>
         <div class="quantity-details">
-          <div class="quantity-amount">2 Boxes (24 Bars)</div>
-          <div class="quantity-price">
-            <span class="price-amount">$54</span>
-            <span class="price-per">$2.25 per bar • Save $4</span>
-          </div>
-          <ul class="quantity-benefits">
-            <li>Nearly a month's supply</li>
-            <li>Better value per bar</li>
-            <li>Ideal for daily routines</li>
-          </ul>
-          <button class="quantity-cta cta-primary">Buy Now</button>
+          <button class="quantity-cta cta-primary">Buy Now - $54</button>
         </div>
       </article>
 
       <!-- 3 Boxes = 36 Bars -->
       <article class="quantity-card" data-index="2">
+        <div class="quantity-amount" data-number="36"></div>
         <div class="quantity-header">
-          <h3>Stock Up & Save</h3>
+          <h3>Family Pack</h3>
           <p class="quantity-subtitle">3 Boxes</p>
         </div>
         <div class="quantity-visual">
-          <div class="box-stack bulk">
-            <div class="product-box">
-              <span class="box-label">12 bars</span>
-            </div>
-            <div class="product-box">
-              <span class="box-label">12 bars</span>
-            </div>
-            <div class="product-box">
-              <span class="box-label">12 bars</span>
-            </div>
+          <div class="product-box">
+            <span class="box-label">12 bars</span>
           </div>
         </div>
         <div class="quantity-details">
-          <div class="quantity-amount">3 Boxes (36 Bars)</div>
-          <div class="quantity-price">
-            <span class="price-amount">$75</span>
-            <span class="price-per">$2.08 per bar • Save $12</span>
-          </div>
-          <ul class="quantity-benefits">
-            <li>Over a month of energy</li>
-            <li>Maximum savings per bar</li>
-            <li>Never run out</li>
-          </ul>
-          <button class="quantity-cta cta-secondary">Buy Now</button>
+          <button class="quantity-cta cta-secondary">Buy Now - $75</button>
         </div>
       </article>
 
