Improve cart button styling and move to right of hamburger menu

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
       <!-- CTA -->
       <a href="#products" class="cta-contact">Buy Now</a>
 
+      <!-- Hamburger Menu Button (Mobile Only) -->
+      <button class="hamburger-menu" aria-label="Toggle menu" aria-expanded="false"></button>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </button>
+
       <!-- Cart Button (Mobile & Desktop) -->
       <button class="cart-btn" aria-label="View cart">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -90,13 +97,6 @@
           <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
         </svg>
         <span class="cart-count">0</span>
-      </button>
-
-      <!-- Hamburger Menu Button (Mobile Only) -->
-      <button class="hamburger-menu" aria-label="Toggle menu" aria-expanded="false">
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
       </button>
     </div>
 
