Fix hamburger menu HTML structure - spans were outside button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <a href="#products" class="cta-contact">Buy Now</a>
 
       <!-- Hamburger Menu Button (Mobile Only) -->
-      <button class="hamburger-menu" aria-label="Toggle menu" aria-expanded="false"></button>
+      <button class="hamburger-menu" aria-label="Toggle menu" aria-expanded="false">
         <span class="hamburger-line"></span>
         <span class="hamburger-line"></span>
         <span class="hamburger-line"></span>
