Update pricing display, add badges to quantity cards, and update Our Story image

--- a/Our-Story.html
+++ b/Our-Story.html
@@ -118,7 +118,7 @@
 
         <!-- RIGHT: real photo -->
         <aside class="story-visual" data-reveal>
-          <img src="IMG_8401.JPG" alt="Vero founders" class="story-image" />
+          <img src="our storu.jpg" alt="Vero founders" class="story-image" />
           <p class="img-caption">
             Three brothers trying to build better energy habits – starting with ourselves.
           </p>
