--- a/Products.html
+++ b/Products.html
@@ -373,6 +373,19 @@
 
       setUsecase('study');
     })();
+
+    // Hamburger Menu Reset
+    (function() {
+      const hamburger = document.querySelector('.hamburger-menu');
+      const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
+      if (!hamburger || !mobileMenuOverlay) return;
+      
+      // Reset menu state on page load
+      hamburger.classList.remove('active');
+      mobileMenuOverlay.classList.remove('active');
+      hamburger.setAttribute('aria-expanded', 'false');
+      document.body.style.overflow = '';
+    })();
   </script>
 
 </body>
