--- a/Science.html
+++ b/Science.html
@@ -437,6 +437,19 @@
       }, { threshold: 0.15 });
       els.forEach(el => io.observe(el));
     })();
+
+    // Hamburger Menu Reset
+    (function() {
+      const hamburger = document.querySelector('.hamburger-menu');
+      const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
+      if (!hamburger || !mobileMenuOverlay) return;
+      
+      // Reset menu state on page load
+      hamburger.classList.remove('active');
+      mobileMenuOverlay.classList.remove('active');
+      hamburger.setAttribute('aria-expanded', 'false');
+      document.body.style.overflow = '';
+    })();
   </script>
 
 </body>
