--- a/Products.html
+++ b/Products.html
@@ -16,7 +16,7 @@
   <!-- ===== NAVBAR (only once) ===== -->
   <header class="site-header" role="banner">
     <div class="container header-inner">
-      <!-- Brand (clicks to top) -->
+      <!-- Brand (left) -->
       <a href="index.html" class="brand" aria-label="Vero — Home">
         <span class="brand-line">
           <span class="brand-word buzz">VERO</span>
@@ -26,15 +26,43 @@
       <!-- Main nav -->
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
         <a href="index.html" class="nav-link">Home</a>
-        <a href="Products.html" class="nav-link is-active">Products</a>
+        <a href="Products.html" class="nav-link">Products</a>
         <a href="Science.html" class="nav-link">Science</a>
         <a href="Nutrition.html" class="nav-link">Nutrition</a>
         <a href="Our-Story.html" class="nav-link">Our Story</a>
-        <a href="#contact" class="nav-link">Contact</a>
       </nav>
 
       <!-- CTA -->
       <a href="#products" class="cta-contact">Buy Now</a>
+
+      <!-- Hamburger Menu Button (Mobile Only) -->
+      <button class="hamburger-menu" aria-label="Toggle menu" aria-expanded="false">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </button>
+
+      <!-- Cart Button (Mobile & Desktop) -->
+      <button class="cart-btn" aria-label="View cart">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <circle cx="9" cy="21" r="1"></circle>
+          <circle cx="20" cy="21" r="1"></circle>
+          <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+        </svg>
+        <span class="cart-count">0</span>
+      </button>
+    </div>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay">
+      <nav class="mobile-nav" role="navigation" aria-label="Mobile navigation">
+        <a href="index.html" class="mobile-nav-link">Home</a>
+        <a href="Products.html" class="mobile-nav-link">Products</a>
+        <a href="Science.html" class="mobile-nav-link">Science</a>
+        <a href="Nutrition.html" class="mobile-nav-link">Nutrition</a>
+        <a href="Our-Story.html" class="mobile-nav-link">Our Story</a>
+        <a href="#products" class="mobile-nav-link mobile-cta">Buy Now</a>
+      </nav>
     </div>
   </header>
 
