--- a/Science.html
+++ b/Science.html
@@ -465,17 +465,49 @@
       els.forEach(el => io.observe(el));
     })();
 
-    // Hamburger Menu Reset
+    // Hamburger Menu Script
     (function() {
       const hamburger = document.querySelector('.hamburger-menu');
       const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
+      const mobileNavLinks = document.querySelectorAll('.mobile-nav-link');
+
       if (!hamburger || !mobileMenuOverlay) return;
-      
+
       // Reset menu state on page load
       hamburger.classList.remove('active');
       mobileMenuOverlay.classList.remove('active');
       hamburger.setAttribute('aria-expanded', 'false');
       document.body.style.overflow = '';
+
+      // Toggle menu
+      hamburger.addEventListener('click', function() {
+        const isActive = this.classList.toggle('active');
+        mobileMenuOverlay.classList.toggle('active');
+        this.setAttribute('aria-expanded', isActive);
+        
+        // Prevent body scroll when menu is open
+        document.body.style.overflow = isActive ? 'hidden' : '';
+      });
+
+      // Close menu when clicking on a link
+      mobileNavLinks.forEach(link => {
+        link.addEventListener('click', function() {
+          hamburger.classList.remove('active');
+          mobileMenuOverlay.classList.remove('active');
+          hamburger.setAttribute('aria-expanded', 'false');
+          document.body.style.overflow = '';
+        });
+      });
+
+      // Close menu when clicking outside
+      mobileMenuOverlay.addEventListener('click', function(e) {
+        if (e.target === this) {
+          hamburger.classList.remove('active');
+          this.classList.remove('active');
+          hamburger.setAttribute('aria-expanded', 'false');
+          document.body.style.overflow = '';
+        }
+      });
     })();
   </script>
 
