--- a/Nutrition.html
+++ b/Nutrition.html
@@ -14,7 +14,7 @@
 
 
   <!-- ===== NAVBAR (only once) ===== -->
-  <header class="site-header" role="banner">
+  <header class="site-header" role="banner" style="background: white !important;">
     <div class="container header-inner">
       <!-- Brand (left) -->
       <a href="index.html" class="brand" aria-label="Vero — Home">
